feat: strategy forgot password

--- a/env/local.env
+++ b/env/local.env
@@ -11,5 +11,7 @@ JWT_SECRET=74YLbq4%c!wU
 JWT_EXPIRATION_TIME=1800
 JWT_REFRESH_TOKEN_SECRET=7jML9q4-c!s0
 JWT_REFRESH_TOKEN_EXPIRATION_TIME=86400
+JWT_FORGOT_PASSWORD_TOKEN_SECRET=$Tq9#7zX5p$Y
+JWT_FORGOT_PASSWORD_TOKEN_EXPIRATION_TIME=600
 
 SERVER_PORT=3333
