--- a/env/local.env
+++ b/env/local.env
@@ -14,4 +14,6 @@ JWT_REFRESH_TOKEN_EXPIRATION_TIME=86400
 JWT_FORGOT_PASSWORD_TOKEN_SECRET=$Tq9#7zX5p$Y
 JWT_FORGOT_PASSWORD_TOKEN_EXPIRATION_TIME=600
 
+TRUSTED_DOMAIN=localhost:3000
+
 SERVER_PORT=3333
