feat: setup mail

--- a/env/local.env
+++ b/env/local.env
@@ -14,6 +14,11 @@ JWT_REFRESH_TOKEN_EXPIRATION_TIME=86400
 JWT_FORGOT_PASSWORD_TOKEN_SECRET=$Tq9#7zX5p$Y
 JWT_FORGOT_PASSWORD_TOKEN_EXPIRATION_TIME=600
 
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=465
+SMTP_USER=d38b04555f4d69
+SMTP_PASS=d06d911481b887
+
 TRUSTED_DOMAIN=localhost:3000
 
 SERVER_PORT=3333
