feat: setup dynamic templates emails

--- a/env/local.env
+++ b/env/local.env
@@ -19,6 +19,6 @@ SMTP_PORT=465
 SMTP_USER=d38b04555f4d69
 SMTP_PASS=d06d911481b887
 
-TRUSTED_DOMAIN=localhost:3000
+TRUSTED_DOMAIN=http://localhost:3000
 
 SERVER_PORT=3333
