--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cookie-parser": "^1.4.6",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.9.3",
+    "nodemailer-express-handlebars": "^6.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
