refactor: adjustment vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,9 @@
     80,
     120
   ],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true,
+    "source.organizeImports": true,
+    "source.sortMembers": true
+  }
 }
