--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,16 @@
     "@rocketseat/eslint-config/node"
   ],
   "rules": {
-    "no-useless-constructor": "off"
+    "no-useless-constructor": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "singleQuote": true,
+        "trailingComma": "none"        
+      },
+      {
+        "usePrettierrc": false
+      }
+    ]
   }
 }
