--- a/env/local.env
+++ b/env/local.env
@@ -20,5 +20,6 @@ SMTP_USER=d38b04555f4d69
 SMTP_PASS=d06d911481b887
 
 TRUSTED_DOMAIN=http://localhost:3000
+ORIGIN_DOMAIN=http://localhost:5173
 
 SERVER_PORT=3333
