feat: email confirmation and endpoint validation email

--- a/env/local.env
+++ b/env/local.env
@@ -13,6 +13,8 @@ JWT_REFRESH_TOKEN_SECRET=7jML9q4-c!s0
 JWT_REFRESH_TOKEN_EXPIRATION_TIME=86400
 JWT_FORGOT_PASSWORD_TOKEN_SECRET=$Tq9#7zX5p$Y
 JWT_FORGOT_PASSWORD_TOKEN_EXPIRATION_TIME=600
+JWT_EMAIL_CONFIRMATION_TOKEN_SECRET=F@5LpLqU$*e2
+JWT_EMAIL_CONFIRMATION_TOKEN_EXPIRATION_TIME=172800
 
 SMTP_HOST=sandbox.smtp.mailtrap.io
 SMTP_PORT=465
